# sample-game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/: CMakeLists.txt  install-libs.sh
src/: application.cpp  application.h  camera.cpp  camera.h  component.h  controls.cpp  controls.h  game_object.h  includes.h  iscript_manager.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  resource_loader.cpp  resource_loader.h  script.h  script_manager.cpp  script_manager.h  script_state.h  sge.h  shader.cpp  shader.h  shader_config.cpp  shader_config.h  texture.cpp  texture.h  tick_limiter.h  timer.h  transform.cpp  transform.h  util.cpp  util.h
src/ECS/: component.cpp  component.h  ecs.cpp  ecs.h  entity.cpp  entity.h  render.cpp  render.h  render_system.h  script.cpp  script.h  script_system.h  system.h  transform.cpp  transform.h
